# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-api-backend"
version = "0.0.1"
description = "Backend for OpenAI/ChatGPT chats with database storage and API"
readme = "README.md"
authors = [{ name = "Tim Wolff-Piggott", email = "twolffpiggott@gmail.com" }]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ChatGPT", "ChatGPTAPI", "OpenAI", "API", "backend", "database"]
dependencies = [
    "fastapi>=0.95.1",
    "SQLAlchemy>=2.0.9",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest>=7.2.1", "httpx==0.24.0"]
dev = [
    "httpx==0.24.0",
    "pytest>=7.2.1",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "ipdb",
    "isort>=5.12.0",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/twolffpiggott/chatgpt-api-backend"

[tool.setuptools]
packages = ["chatgpt_api_backend"]

[tool.isort]
profile = "black"
multi_line_output = 3
